--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -1,31 +1,31 @@
-<div class="jumbotron">
-  <h1 class="display-4">Hello, world!</h1>
-    <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-
-    <hr class="my-4">
-
-    <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-
-    <a class="btn btn-primary btn-lg" href="#" role="button">Oferta</a>
-</div>
-
 <div class="container pb-5">
+
+  <div class="jumbotron">
+    <h1 class="display-5 text-success">O nas</h1>
+      <p class="lead">Jeśteśmy firmą z długoletnim doświadczeniem. Działamy w obszarze wykończenia wnętrz oraz różnych instalacji.</p>
+
+      <hr class="my-4">
+
+      <p>Stawiamy przede wszystkim na fachowość usług oraz terminowość wykonywania poszczególnych zleceń.</p>
+
+  </div>
+
   <div class="row pb-5">
     <div class="col-md-12 col-lg-3">
-      <h2>Heading</h2>
-        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+      <h2 class="text-center font-italic alert alert-info">Historia</h2>
+        <p class="text-justify">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
     </div>
     <div class="col-md-12 col-lg-3">
-      <h2>Heading</h2>
-        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+      <h2 class="text-center font-italic alert alert-dark">Doświadczenie</h2>
+        <p class="text-justify">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
     </div>
     <div class="col-md-12 col-lg-3">
-      <h2>Heading</h2>
-        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+      <h2 class="text-center font-italic alert alert-primary">Zespół</h2>
+        <p class="text-justify">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
     </div>
     <div class="col-md-12 col-lg-3">
-      <h2>Heading</h2>
-        <p class="pb-5">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+      <h2 class="text-center font-italic alert alert-secondary">Zasięg</h2>
+        <p class="pb-5 text-justify">Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
     </div>
   </div>
 </div>
