--- a/app/views/opinions/accept_index.html.erb
+++ b/app/views/opinions/accept_index.html.erb
@@ -11,15 +11,15 @@
 
             <div class="row pb-5">
                 <% @opinions.each do |opinion| %>
-                  <div class="col-12">
-                    <div class="card"> 
+                  <div class="col-12 col-lg-4 p-2">
+                    <div class="card p-2"> 
                             <div class="card-block text-center pt-3 pb-3">
                                  <h4 class="card-title text-center font-weight-bold">
                                     <%=opinion.name %>
                                  </h4>
-                                 <h4 class="card-body text-justify mx-2">
+                                 <p class="card-body text-justify mx-2">
                                     <%=sanitize opinion.description %>
-                                 </h4>      
+                                 </p>      
 
                                 <% if opinion.accept == true %>
 
@@ -37,7 +37,7 @@
 
                                   <% if current_user && current_user&.admin? %>
 
-                                    <div class="p-2">
+                                    <div class="p-2 text-center">
 
                                       <%= link_to 'Edytuj', edit_admin_opinion_path(opinion), class: "btn btn-lg btn-info" %>
                                       <%= link_to 'Usuń', opinion_path(opinion), method: :delete, data: {confirm: 'Czy na pewno usunąć?'}, class: "btn btn-lg btn-danger" %>
