--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -1,43 +1,48 @@
-<div class="jumbotron">
-  <h1 class="display-4">Hello, world!</h1>
-    <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+<div class="container marketing pb-5">
+
+  <div class="jumbotron">
+  <h1 class="display-5 text-center text-danger">Oferta</h1>
+    <p class="lead">Oferujemy kompleksowe usługi w zakresie wykończenia wnętrz oraz instalacji</p>
 
     <hr class="my-4">
 
-    <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+    <p>Zapoznaj się z naszymi usługami poniżej i skontaktuj się!</p>
 
-    <a class="btn btn-primary btn-lg" href="#" role="button">Aktualności</a>
-</div>
-
-<div class="container marketing pb-5">
-
-  <div class="row">
-    <div class="col-lg-4">
-      <%=link_to (image_tag 'box1.png', class:"img-fluid rounded-circle", style:"display:inline; width:200px; height:200px")%>
-      <p class="pt-5">Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-    </div>
-    <div class="col-lg-4">
-      <%=link_to (image_tag 'box1.png', class:"img-fluid rounded-circle", style:"display:inline; width:200px; height:200px")%>
-      <p class="pt-5">Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-    </div>
-    <div class="col-lg-4">
-      <%=link_to (image_tag 'box1.png', class:"img-fluid rounded-circle", style:"display:inline; width:200px; height:200px")%>
-      <p class="pt-5">Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-    </div>
   </div>
 
   <div class="row">
     <div class="col-lg-4">
       <%=link_to (image_tag 'box1.png', class:"img-fluid rounded-circle", style:"display:inline; width:200px; height:200px")%>
-      <p class="pt-5">Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+      <h2 class="text-center font-italic pt-2">Usługa1</h2>
+      <p class="pt-1">Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
     </div>
     <div class="col-lg-4">
       <%=link_to (image_tag 'box1.png', class:"img-fluid rounded-circle", style:"display:inline; width:200px; height:200px")%>
-      <p class="pt-5">Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+      <h2 class="text-center font-italic pt-2">Usługa2</h2>
+      <p class="pt-1">Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
     </div>
     <div class="col-lg-4">
       <%=link_to (image_tag 'box1.png', class:"img-fluid rounded-circle", style:"display:inline; width:200px; height:200px")%>
-      <p class="pt-5 pb-5">Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+      <h2 class="text-center font-italic pt-2">Usługa3</h2>
+      <p class="pt-1">Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+    </div>
+  </div>
+
+  <div class="row pb-4">
+    <div class="col-lg-4">
+      <%=link_to (image_tag 'box1.png', class:"img-fluid rounded-circle", style:"display:inline; width:200px; height:200px")%>
+      <h2 class="text-center font-italic pt-2">Usługa4</h2>
+      <p class="pt-1">Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+    </div>
+    <div class="col-lg-4">
+      <%=link_to (image_tag 'box1.png', class:"img-fluid rounded-circle", style:"display:inline; width:200px; height:200px")%>
+      <h2 class="text-center font-italic pt-2">Usługa5</h2>
+      <p class="pt-1">Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+    </div>
+    <div class="col-lg-4">
+      <%=link_to (image_tag 'box1.png', class:"img-fluid rounded-circle", style:"display:inline; width:200px; height:200px")%>
+      <h2 class="text-center font-italic pt-2">Usługa6</h2>
+      <p class="pt-1">Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
     </div>
   </div>
 
