--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,19 @@
+<section class="container flex-column d-flex justify-content-center pt-5 pb-5">
 
+  <div class="row text-center pb-5">
+	  <div class="col-12 col-lg-6 p-3">
+			  
+	    <%= link_to image_tag('2.jpg', class: "mx-auto d-block", style: "width:100%"), about_index_path %>
+	    <p class="lead p-2 font-italic"><%= link_to "Wykończenia", about_index_path, class: 'btn btn-lg btn-primary'%></p>
+
+	  </div>
+
+	  <div class="col-12 col-lg-6 p-3">
+			  
+	    <%= link_to image_tag('3.jpg', class: "mx-auto d-block", style: "width:100%"), about_index_path %>
+	    <p class="lead p-2 font-italic"><%= link_to "Instalacje", about_index_path, class: 'btn btn-lg btn-warning'%></p>
+
+	  </div>
+  </div>
+
+</section>
