--- a/app/views/executions/index.html.erb
+++ b/app/views/executions/index.html.erb
@@ -17,15 +17,15 @@
 
           <div class="row pb-5">
               <% @executions.each do |execution| %>
-                <div class="col-12">
-                  <div class="card"> 
+                <div class="col-12 col-lg-4 p-2">
+                  <div class="card p-2"> 
                           <div class="card-block text-center">
-                               <h4 class="card-title text-center text-capitalize font-weight-bold">
+                               <h4 class="card-title text-center text-capitalize font-weight-bold pt-3">
                                   <%=execution.name %>
                                </h4>
-                               <h4 class="card-title text-justify mx-2">
+                               <p class="card-title text-justify mx-2">
                                   <%=sanitize execution.description %>
-                               </h4>                         
+                               </p>                         
 
                                 <% if current_user && current_user&.admin? %>
 
