--- a/app/views/executions/show.html.erb
+++ b/app/views/executions/show.html.erb
@@ -1,49 +1,39 @@
 <section class="container pt-5 pb-5">
-  <div class="row">
-      <div class="col-12">
+  <div class="row pb-5">
+                <% @execution.images.each do |image| %>
+                  <div class="col-12 col-lg-4 p-2">
+                    <div class="card p-2"> 
+                            <div class="card-block text-center">
+   
+                                 <p class="card-title text-justify mx-2">
+                                    <%= image_tag image.variant(resize:"450x450"), style:"width:100%; height:400px;object-fit:cover;" %>
+                                 </p>  
 
-        <p class="text-center">
-          <%= @execution.name %>
-        </p>
+                                  <% if current_user && current_user&.admin? %>
 
-        <p class="text-justify">
-          <%=sanitize @execution.description %>
-        </p>
 
-      </div>
+                                      <div>
+                                        
+                                          <%= link_to 'Usuń', delete_image_attachment_execution_path(image), method: :delete, data: { confirm: 'Are you sure?' },
+                                          class: "btn btn-lg btn-danger"  %>
+
+                                      </div><hr>
+
+                                    <% end %>
+
+                              </div>
+                      </div>
+                    </div>
+                  <% end %>  
   </div>
+               
+    <div class="pb-5">
+        <%= link_to 'Powrót', executions_path, class: 'btn btn-lg btn-success' %>
 
-  <div class="row">
-      <div class="col-12 text-center">
+      <% if current_user && current_user&.admin? %>
 
-       
-          <% @execution.images.each do |image| %>
+        <%= link_to 'Edytuj', edit_execution_path(@execution), class: 'btn btn-lg btn-primary' %> 
 
-            <div class="p-2">
-
-              <%= image_tag image.variant(resize:"450x450") %>
-
-            </div>
-
-            <div>
-              
-                <%= link_to 'Usuń', delete_image_attachment_execution_path(image), method: :delete, data: { confirm: 'Are you sure?' },
-                class: "btn btn-lg btn-danger"  %>
-
-            </div><hr>
-
-          <% end %> 
-        </div>
-  </div>
-
-  <div class="pb-5">
-      <%= link_to 'Powrót', executions_path, class: 'btn btn-lg btn-success' %>
-
-    <% if current_user && current_user&.admin? %>
-
-      <%= link_to 'Edytuj', edit_execution_path(@execution), class: 'btn btn-lg btn-primary' %> 
-
-    <% end %>
-  </div>
-
+      <% end %>
+    </div>
 </section>
