--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -7,7 +7,7 @@
 	    <%= f.hidden_field :user_id, value: 1 %>
 	    <%= link_to 'Powrót', posts_path, class: 'btn btn-info btn-lg' %><hr>
 	   <div class="pb-5"> 
-	   		<%= f.submit "Zapisz", class: 'btn btn-success', style: "float:left" %>
+	   		<%= f.submit "Zapisz", class: 'btn btn-lg btn-success', style: "float:left" %>
 	   </div>
 
 	<% end %>
