--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -4,9 +4,9 @@
       </button>
 
       <div class="collapse navbar-collapse" id="navbarsExample01">
-        <ul class="navbar-nav mr-auto">
+        <ul class="navbar-nav mx-auto">
 
-          <li class="nav-item active pl-5">
+          <li class="nav-item active">
             <%= link_to 'Aktualności', posts_path, class: 'nav-link pl-5' %>
           </li>
 
@@ -27,9 +27,9 @@
           </li>
 
           <li class="nav-item">
-            <%= link_to 'Facebook', root_path, class: 'nav-link pl-5' %>
+            <%= link_to 'Facebook', "https://www.facebook.com/marek.marchel.58", target: :_blank, class: 'nav-link pl-5' %> 
           </li>
-          
+
           <li class="nav-item">
             <%= link_to 'Kontakt', new_message_path, class: 'nav-link pl-5' %>
           </li>
